# geoexhibit

./: .coverage  .cursorrules  .demo_job_id  .gitignore  .pre-commit-config.yaml  AGENTS.md  DECISIONS.md  PLUGIN_DEVELOPMENT.md  PLUGIN_IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  README.md  REPOSITORY_ORGANIZATION_PROPOSAL.md  STEEL_THREAD_IMPLEMENTATION.md  STEEL_THREAD_INFRASTRUCTURE_RESULTS.md  TECHNICAL_DEBT.md  ci_gate.py  discover_cloudfront.py  pre-commit-hook.sh  pre-push-hook.sh  pyproject.toml  setup_dev.sh  steel_thread_test.py  steel_thread_validation_complete.py  steel_thread_validator.py  test_fix.py  test_fix_simple.py  verify_aws_publishing.py
.cursor/: rules
.cursor/rules/: ci-gate.mdc  commit-discipline.mdc  python-style.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature.md
.github/workflows/: ci.yml
agent_playbook/: branch_create.sh  issue_create.sh  pr_create.sh  pr_fetch_comments.sh
analyzers/: example_analyzer.py  simple_example.py
demo/: README.md  config.json  features.json  steel_thread_test.py  test_aws_pipeline.py  test_demo.py  test_local_pipeline.py  test_stac_webmap_e2e.py
docs/: README.md
docs/agent-context/: AGENTS.md  AGENT_META_PROMPT.md  AGENT_ONBOARDING.md  DECISIONS.md  PLAYBOOK.md  PROJECT_STATUS.md  README.md  ROADMAP.md
docs/agent-context/agent_playbook/: Makefile  gh_api.sh  pr_comment.sh
examples/: analyzer_dummy.py  collection_spec.json  features.json  time_provider_attribute.json  time_provider_callable.py
geoexhibit/: __init__.py  analyzer.py  cli.py  config.py  declarative_time.py  demo_analyzer.py  layout.py  orchestrator.py  pipeline.py  plugin_registry.py  publish_plan.py  publisher.py  stac_writer.py  time_provider.py  timespan.py
geoexhibit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
geoexhibit/adapters/: __init__.py  pmtiles.py  storage_local.py  storage_s3.py
geoexhibit/core/: __init__.py  ingest.py  interfaces.py  publisher.py  specs.py  stac_writer.py  time.py
terraform/: Makefile  README.md  main.tf  outputs.tf  setup-aws-permissions.sh  steel-thread-test.py  terraform.tfstate.1757896031.backup  terraform.tfvars.example  validate-infrastructure.py  variables.tf
terraform/lambda/titiler/: Dockerfile  handler.py  minimal_handler.py  requirements.txt  steel_thread_handler.py
tests/: test_analyzer.py  test_cli.py  test_config.py  test_declarative_time.py  test_demo_analyzer.py  test_integration.py  test_layout.py  test_orchestrator.py  test_orchestrator_plugins.py  test_pipeline.py  test_plugin_config_unit.py  test_plugin_integration.py  test_plugin_registry.py  test_plugin_registry_unit.py  test_publish_plan.py  test_publisher.py  test_stac_writer.py  test_time_provider.py  test_timespan.py
web_scaffold/: app.js  index.html
