[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geoexhibit"
version = "0.1.0"
description = "A minimal, test-driven Python toolkit for publishing static STAC metadata and raster outputs to S3"
authors = [{name = "GeoExhibit Contributors"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "click>=8.0.0",
    "pystac>=1.9.0",
    "ulid-py>=1.1.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.7.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
geoexhibit = "geoexhibit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["geoexhibit*"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=geoexhibit --cov-report=term-missing --cov-fail-under=95"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88